# VideoCaptionsAI

./: .gitignore  PROJECT_ANALYSIS.md  README.md  docker-compose.yml  installer.iss  package-lock.json  package.json
.github/: copilot-instructions.md
VideoSubs/: .env.example  .gitignore  Dockerfile  Makefile  README.md  build.py  build_exe.spec  check_gpu.py  installer.iss  langgraph.json  main_exe.py  pyinst_full.txt  pyinst_out.txt  pyinstaller_log.txt  pyproject.toml  requirements.txt  run_backend.bat  run_backend.ps1  runtime_hook.py  test_server.py  test_spec.spec
VideoSubs/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
VideoSubs/frontend_dist/: index.html
VideoSubs/frontend_dist/assets/: index-Dg4aMU2u.js  index-L7F6JlI6.css
VideoSubs/src/: app.py  auth.py  config.py  config_manager.py  connection_manager.py  db.py
VideoSubs/src/agent/: Subs.py  SubsAI.py  __init__.py
VideoSubs/src/routers/: asr.py  auth.py  burn.py  copilot.py  history.py  tasks.py  upload.py
VideoSubs/src/services/: cleanup.py  handlers.py  storage.py  style_recommender.py
VideoSubs/src/tools/: subtitle_tools.py
VideoSubs/src/utils/: download_models.py  model_loader.py  task_queue.py
VideoSubs/static/: index.html
VideoSubs/tests/integration_tests/: test_pipeline.py
VideoSubs/tests/unit_tests/: test_api.py  test_tools.py
agentfront/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
agentfront/src-tauri/: Cargo.toml  tauri.conf.json
agentfront/src-tauri/capabilities/: default.json
agentfront/src-tauri/src/: lib.rs
docs/: ASR_OPTIMIZATION.md  HISTORY_FEATURE.md
electron-app/: main.js  (+2 more)
(+43 files in other folders)
