[project]
name = "videocaptionsai"
version = "1.0.0"
description = "AI-powered video subtitle recognition, style editing, and hard-burning tool"
authors = [
    { name = "VideoCaptionsAI" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.25",
    "sqlalchemy>=1.4",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0",
    "whisper>=1.1",
    "torch>=2.0",
    "numpy>=1.24",
    "langchain-core>=0.1",
    "langchain-openai>=0.0.5",
    "langgraph>=0.2",
    "langchain-tavily>=0.0.1",
    "pystray>=0.19",
    "Pillow>=10.0",
    "pyinstaller>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.3"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
lint.select = ["E", "F", "I"]
lint.ignore = ["E501"]