[package]
name = "video-captions-ai"
version = "1.0.0"
description = "VideoCaptionsAI - Video Subtitle Recognition and Burning"
authors = ["VideoCaptionsAI"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.4", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["blocking"] }
